--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/fonts/css/all.css">
+    <link rel="stylesheet" href="assets/jQuery/jquery-ui.min.css">
     <style>
         body > section > section {
             position: relative;
@@ -58,6 +59,7 @@
         .chess-icon {
             height: 60px;
             padding: 8px;
+            transition: transform 1s;
         }
 
 
@@ -146,36 +148,61 @@
 
     <button id="btnRotate" >Rotate</button>
 
+
+    <img id='blackPawn' src='assets/img/Black-Pawn.png' class='chess-icon'>
+    <img id="blackRook" src='assets/img/Black-Rook.png' class='chess-icon'>
+    <img id="blackKnight" src='assets/img/Black-Knight.png' class='chess-icon'>
+    <img id="blackBishop" src='assets/img/Black-Bishop.png' class='chess-icon'>
+    <img id="blackKing" src='assets/img/Black-King.png' class='chess-icon'>
+    <img id="blackQueen" src='assets/img/Black-Queen.png' class='chess-icon'>
+
+    <img id='whitePawn' src='assets/img/White-Pawn.png' class='chess-icon'>
+    <img id='whiteRook' src='assets/img/White-Rook.png' class='chess-icon'>
+    <img id='whiteKnight' src='assets/img/White-Knight.png' class='chess-icon'>
+    <img id='whiteBishop' src='assets/img/White-Bishop.png' class='chess-icon'>
+    <img id='whiteKing' src='assets/img/White-King.png' class='chess-icon'>
+    <img id='whiteQueen' src='assets/img/White-Queen.png' class='chess-icon'>
 </section>
 
 <script src="assets/jQuery/jquery-3.6.0.min.js"></script>
+<script src="assets/jQuery/jquery-ui.min.js"></script>
+
 <script>
 
    reset();
 
-    function reset(){
-        $("#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8").append("<img src='assets/img/Black-Pawn.png' class='chess-icon'>");
-        $("#a1,#a8").append("<img src='assets/img/Black-Rook.png' class='chess-icon'>");
-        $("#a2,#a7").append("<img src='assets/img/Black-Knight.png' class='chess-icon'>");
-        $("#a3,#a6").append("<img src='assets/img/Black-Bishop.png' class='chess-icon'>");
-        $("#a4").append("<img src='assets/img/Black-King.png' class='chess-icon'>");
-        $("#a5").append("<img src='assets/img/Black-Queen.png' class='chess-icon'>");
+   /*$("#f1").droppable({
+       drop: function (event, ui){
+           clearSelection();
+           $(this).css('background','green');
+       }
+   });*/
 
-        $("#g1,#g2,#g3,#g4,#g5,#g6,#g7,#g8").append("<img src='assets/img/White-Pawn.png' class='chess-icon'>");
-        $("#h1,#h8").append("<img src='assets/img/White-Rook.png' class='chess-icon'>");
-        $("#h2,#h7").append("<img src='assets/img/White-Knight.png' class='chess-icon'>");
-        $("#h3,#h6").append("<img src='assets/img/White-Bishop.png' class='chess-icon'>");
-        $("#h4").append("<img src='assets/img/White-King.png' class='chess-icon'>");
-        $("#h5").append("<img src='assets/img/White-Queen.png' class='chess-icon'>");
+    function reset(){
+        $("#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8").append($("#blackPawn"));
+        $("#a1,#a8").append($("#blackRook"));
+        $("#a2,#a7").append($("#blackKnight"));
+        $("#a3,#a6").append($("#blackBishop"));
+        $("#a4").append($("#blackKing"));
+        $("#a5").append($("#blackQueen"));
+
+        $("#g1,#g2,#g3,#g4,#g5,#g6,#g7,#g8").append($("#whitePawn"));
+        $("#h1,#h8").append($("#whiteRook"));
+        $("#h2,#h7").append($("#whiteKnight"));
+        $("#h3,#h6").append($("#whiteBishop"));
+        $("#h4").append($("#whiteKing"));
+        $("#h5").append($("#whiteQueen"));
 
         setDefaultSelection();
-        setBlackDisable();
+        setDefaultDisable();
+
     }
 
     function clearSelection(){
         $("#c1,#d1,#c2,#d2,#c3,#d3,#c4,#d4,#c5,#d5,#c6,#d6,#c7,#d7,#c8,#d8").css('background','none');
         $("#e1,#f1,#e2,#f2,#e3,#f3,#e4,#f4,#e5,#f5,#e6,#f6,#e7,#f7,#e8,#f8").css('background','none');
         // $("#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8").css('background','none');
+
     }
 
     function setDefaultSelection(){
@@ -249,7 +276,7 @@
 
     }
 
-    function setBlackDisable(){
+    function setDefaultDisable(){
         if (!bPlayer){
             $("#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8").css('pointer-events','none');
             $("#g1,#g2,#g3,#g4,#g5,#g6,#g7,#g8").css('pointer-events','auto');
@@ -257,12 +284,11 @@
             $("#g1,#g2,#g3,#g4,#g5,#g6,#g7,#g8").css('pointer-events','none');
             $("#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8").css('pointer-events','auto');
         }
-
     }
 
     var bPlayer = true;
     $("#btnRotate").click(function (){
-        setBlackDisable();
+        setDefaultDisable();
         if (bPlayer){
             $("#board,.cell").css('transform','rotate(180deg)');
         }else{
